--- a/hello2.html
+++ b/hello2.html
@@ -4,7 +4,7 @@
         <title>hello2</title>
     </head>
     <body>
-        <h1 style ="color:blue;">how are you man</h1>
+        <h1>how are you man</h1>
     </body>
 
 </html>
